syntax = "proto3";

package pb;

service PayService {
    rpc Charge (ChargeRequest) returns (ChargeResponse) {}
}

message ChargeRequest {
    string id = 1;
    string token = 2;
    int32 amount = 3;
    string name = 4;
    string description = 5;
}

message ChargeResponse {
    bool paid = 1;
    int32 amount = 2;
    bool captured = 3;
}
